# task1-emr_system-

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
code/: manage.py
code/api/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  views.py
code/emr_system/: settings.py  urls.py
code_dir/: manage.py
code_dir/api/: admin.py  exceptions.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
code_dir/api/fixtures/: test_data.json
code_dir/emr_system/: asgi.py  settings.py  urls.py  wsgi.py
migrations/api/: 0001_initial.py  0002_alter_customuser_groups_and_more.py
tests/api/: test_forms.py  test_models.py  test_permissions.py  test_views.py
